--- a/ThinkWhat/Modules/UI/Popup & Banner/Banner.xib
+++ b/ThinkWhat/Modules/UI/Popup & Banner/Banner.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,16 +31,16 @@
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AB7-J0-o3H">
-                    <rect key="frame" x="15.5" y="52" width="383" height="80"/>
+                    <rect key="frame" x="10" y="56" width="394" height="80"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0P-Na-v1c">
-                            <rect key="frame" x="0.0" y="0.0" width="383" height="80"/>
+                            <rect key="frame" x="0.0" y="0.0" width="394" height="80"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mop-7n-f8J">
-                                    <rect key="frame" x="0.0" y="0.0" width="383" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="394" height="80"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rar-ub-moY">
-                                            <rect key="frame" x="8" y="8" width="367" height="64"/>
+                                            <rect key="frame" x="8" y="8" width="378" height="64"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </view>
                                     </subviews>
@@ -83,8 +83,9 @@
                 <constraint firstItem="AB7-J0-o3H" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="585-1d-HCy"/>
                 <constraint firstAttribute="bottom" secondItem="ThP-Hz-SG0" secondAttribute="bottom" id="JCF-Vn-ExU"/>
                 <constraint firstItem="AB7-J0-o3H" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="MqJ-QO-2om"/>
-                <constraint firstItem="AB7-J0-o3H" firstAttribute="width" secondItem="vUN-kp-3ea" secondAttribute="width" multiplier="0.925" id="P7q-61-3OP"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AB7-J0-o3H" secondAttribute="trailing" constant="10" id="PR9-Pp-05a"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ThP-Hz-SG0" secondAttribute="trailing" id="bsP-y6-KZX"/>
+                <constraint firstItem="AB7-J0-o3H" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="gV1-On-mTj"/>
                 <constraint firstItem="ThP-Hz-SG0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kf7-yJ-nnC"/>
                 <constraint firstItem="ThP-Hz-SG0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="o4V-p9-pJa"/>
             </constraints>
