--- a/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/EmptySurvey/EmptyCard.xib
+++ b/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/EmptySurvey/EmptyCard.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,7 +20,6 @@
                 <outlet property="contentView" destination="iN0-l3-epB" id="MlO-nC-MOI"/>
                 <outlet property="createButton" destination="Ugp-Qt-uAz" id="LEX-13-Pbz"/>
                 <outlet property="label" destination="URD-iS-Q7f" id="yqA-u8-q6A"/>
-                <outlet property="loadingIndicator" destination="AfZ-e7-Bps" id="FWS-g3-cDs"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,8 +30,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EU2-28-XPl">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URD-iS-Q7f">
-                            <rect key="frame" x="47" y="441.5" width="281" height="27.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label Label Label Label Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URD-iS-Q7f">
+                            <rect key="frame" x="47" y="441.66666666666674" width="281" height="23.333333333333314"/>
                             <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="20"/>
                             <color key="textColor" systemColor="secondaryLabelColor"/>
                             <nil key="highlightedColor"/>
@@ -41,13 +40,6 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="URD-iS-Q7f" firstAttribute="centerX" secondItem="EU2-28-XPl" secondAttribute="centerX" id="SOV-xF-LZD"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AfZ-e7-Bps" customClass="LoadingIndicator" customModule="ThinkWhat" customModuleProvider="target">
-                    <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="AfZ-e7-Bps" secondAttribute="height" multiplier="1:1" id="WO9-SV-mln"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ugp-Qt-uAz">
@@ -69,14 +61,10 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="EU2-28-XPl" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="2DF-UP-dKs"/>
-                <constraint firstItem="AfZ-e7-Bps" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="5YE-go-G9x"/>
-                <constraint firstItem="AfZ-e7-Bps" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="200:667" id="9Ek-zF-VOP"/>
                 <constraint firstItem="EU2-28-XPl" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="Fo6-LA-dp0"/>
                 <constraint firstItem="EU2-28-XPl" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" id="RNU-FR-cVU"/>
-                <constraint firstItem="AfZ-e7-Bps" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="TnA-wJ-8m4"/>
                 <constraint firstItem="EU2-28-XPl" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="dB2-ih-TvL"/>
                 <constraint firstItem="Ugp-Qt-uAz" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="1.7" id="dFA-4d-XSV"/>
-                <constraint firstItem="URD-iS-Q7f" firstAttribute="top" secondItem="AfZ-e7-Bps" secondAttribute="bottom" constant="8" id="s4b-3B-KTs"/>
                 <constraint firstItem="Ugp-Qt-uAz" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="sqA-5b-cC7"/>
                 <constraint firstItem="Ugp-Qt-uAz" firstAttribute="width" secondItem="EU2-28-XPl" secondAttribute="width" multiplier="0.6" id="uDS-fL-weh"/>
             </constraints>
